# email-ai-manager

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  db.py  main.py  models.py
app/agents/: __init__.py  base.py  calendar.py  coordinator.py  drafting.py  rules.py  spam_filter.py  teams_comms.py
app/api/: __init__.py  routes.py  schemas.py
app/integrations/: __init__.py  mcp_client.py  mcp_email.py  mcp_teams.py
dashboard/: app.js  index.html  styles.css
docker/: Dockerfile  docker-compose.yml
migrations/: 001_initial.sql  002_follow_up.sql  002_phase4_columns.sql
tests/: __init__.py
